--- a/outils/CM_Livret_A5.html
+++ b/outils/CM_Livret_A5.html
@@ -198,8 +198,7 @@
       grid-template-columns: 105mm 105mm;
       grid-template-rows: 148.5mm 148.5mm;
       position:relative;
-      page-break-after: always;
-    }
+}
 
     /* traits guides (gris très léger) */
     .page::before{
@@ -817,15 +816,15 @@
       .sidebar{ display:none !important; }
       .main{ padding:0 !important; background:white !important; display:block !important; }
       #pages{ display:block !important; }
-      .page-wrap{ margin:0 !important; padding:0 !important; }
+      .page-wrap{ margin:0 !important; padding:0 !important; break-after: page; page-break-after: always; }
+      .page-wrap:last-child{ break-after: auto; page-break-after: auto; }
       .page-meta{ display:none !important; }
       .page{
         width: 210mm !important;
         height: 297mm !important;
         margin:0 !important;
         box-shadow:none !important;
-        page-break-after: always;
-      }
+}
       *{ -webkit-print-color-adjust: exact; print-color-adjust: exact; }
     }
   
